# new_admin_panel_sprint_2

docker_compose/: docker-compose.yml
docker_compose/movies_admin/: .db  .env_example  .gitignore  Dockerfile  pyproject.toml
docker_compose/movies_admin/config/: settings.py  urls.py
docker_compose/movies_admin/movies/: admin.py  models.py
docker_compose/movies_admin/movies/api/v1/: mixin.py  views.py
docker_compose/movies_admin/movies/migrations/: 0001_initial.py  0002_filmwork_person_alter_genre_description_and_more.py  0003_alter_genrefilmwork_options_and_more.py  0004_remove_genrefilmwork_filmwork_genre_idx_and_more.py
docker_compose/nginx/: nginx.conf
