[tool.poetry]
name = "movies-admin"
version = "0.0.1"
description = "Project assignment: admin panel"
authors = ["TheBreadEnergy <thebreadenergy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.3"
load-dotenv = "0.1.0"
django-split-settings = "^1.2.0"
psycopg2 = "^2.9.9"
flake8 = "^6.1.0"
autopep8 = "^2.0.4"
flake8-isort = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
